Fixed stats spacing issue

--- a/paw/angular/app/styles/feed.scss
+++ b/paw/angular/app/styles/feed.scss
@@ -1039,6 +1039,10 @@ html {
   font-size: 18px !important;
 }
 
+.stat-title-aux {
+  width: 50px !important;
+}
+
 .view-more{
   margin-top: 10px;
   color: #585858;
